--- a/assets/styles/authoring/layout/workspace.scss
+++ b/assets/styles/authoring/layout/workspace.scss
@@ -25,10 +25,9 @@
 
   .workspace-header {
     width: 100%;
-    padding: 6px 37px 3px 20px;
+    padding: 16px 32px;
     position: relative;
     background-color: $workspace-header-bg;
-    border-bottom: 1px solid rgb(213, 207, 207);
 
     h2 {
       margin-bottom: 4px;
