--- a/assets/styles/themes/authoring/torus/dark.scss
+++ b/assets/styles/themes/authoring/torus/dark.scss
@@ -4,28 +4,29 @@
  * Theme-specific variables and custom styles
  */
 
-$white: #fff;
-$gray-100: #f8f9fa;
-$gray-200: #ebebeb;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #888;
-$gray-700: #444;
-$gray-800: #303030;
-$gray-900: #222;
-$black: #000;
+$gray-100: #cdcfdd;
+$gray-200: #b7b9c5;
+$gray-300: #a2a4af;
+$gray-400: #83858f;
+$gray-500: #73757e;
+$gray-600: #5c5d64;
+$gray-700: #494a50;
+$gray-800: #3e3f44;
+$gray-900: #333438;
 
-$blue: #2c67c4;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$red: #e74c3c;
-$orange: #fd7e14;
-$yellow: #f39c12;
-$green: #00bc8c;
-$teal: #20c997;
-$cyan: #3498db;
+$black: #000;
+$white: #fff;
+
+$blue: #5d84c4;
+$indigo: #9d6cec;
+$purple: #8567bd;
+$pink: #e46da4;
+$red: #e07266;
+$orange: #faa660;
+$yellow: #eeb75f;
+$green: #67bda7;
+$teal: #64c4a7;
+$cyan: #77accf;
 
 $primary: $blue;
 $secondary: $gray-600;
@@ -40,8 +41,8 @@ $yiq-contrasted-threshold: 175;
 
 // Body
 
-$body-bg: $gray-900;
-$body-color: $white;
+$body-bg: #2a2b2e;
+$body-color: #f5f5f5;
 
 // Links
 
@@ -77,8 +78,8 @@ $dropdown-bg: $gray-900;
 $dropdown-border-color: $gray-700;
 $dropdown-divider-bg: $gray-700;
 
-$dropdown-link-color: $white;
-$dropdown-link-hover-color: $white;
+$dropdown-link-color: $body-color;
+$dropdown-link-hover-color: $body-color;
 $dropdown-link-hover-bg: $primary;
 
 // Navs
@@ -86,13 +87,13 @@ $dropdown-link-hover-bg: $primary;
 $nav-link-disabled-color: $gray-500;
 $nav-tabs-border-color: $gray-700;
 $nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
-$nav-tabs-link-active-color: $white;
+$nav-tabs-link-active-color: $body-color;
 $nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
 
 // Navbar
 
-$navbar-dark-color: rgba($white, 0.6);
-$navbar-dark-hover-color: $white;
+$navbar-dark-color: rgba($body-color, 0.6);
+$navbar-dark-hover-color: $body-color;
 
 $navbar-light-color: rgba($gray-900, 0.7);
 $navbar-light-hover-color: $gray-900;
@@ -101,19 +102,19 @@ $navbar-light-toggler-border-color: rgba($gray-900, 0.1);
 
 // Pagination
 
-$pagination-color: $white;
+$pagination-color: $body-color;
 $pagination-bg: $success;
 $pagination-border-width: 0;
 $pagination-border-color: transparent;
 
-$pagination-hover-color: $white;
+$pagination-hover-color: $body-color;
 $pagination-hover-bg: lighten($success, 10%);
 $pagination-hover-border-color: transparent;
 
 $pagination-active-bg: $pagination-hover-bg;
 $pagination-active-border-color: transparent;
 
-$pagination-disabled-color: $white;
+$pagination-disabled-color: $body-color;
 $pagination-disabled-bg: darken($success, 15%);
 $pagination-disabled-border-color: transparent;
 
@@ -170,11 +171,20 @@ $pre-color: inherit;
 
 /** OLI specific varaibles **/
 
-$workspace-header-bg: $gray-900;
-$workspace-sidebar-bg: $gray-700;
-$workspace-sidebar-link-color: $white;
-$workspace-bg: $gray-900;
-/** Theme-specific custom styles for authoring **/
+$workspace-header-bg: transparent;
+$workspace-sidebar-bg: #2d333b;
+$workspace-sidebar-link-color: $body-color;
+$workspace-bg: $body-bg;
+
+///////////////////////////////////////////////////////////////////////////////
+// IMPORTANT: DO NOT MODIFY IMPORT
+// This import is required and must always be after the last variable
+// declaration and before any custom styles in this style sheet
+///////////////////////////////////////////////////////////////////////////////
+@import "authoring.scss";
+///////////////////////////////////////////////////////////////////////////////
+
+/** Theme-specific custom styles **/
 
 .workspace-sidebar {
   .label {
@@ -321,9 +331,3 @@ $workspace-bg: $gray-900;
     }
   }
 }
-
-///////////////////////////////////////////////////////////////////////////////
-// IMPORTANT: DO NOT MODIFY BELOW
-// This import is required and must always be the last item in this style sheet
-///////////////////////////////////////////////////////////////////////////////
-@import 'authoring.scss';
